err/py-interface.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_interface'...
Compiling './lib/python3.5/site-packages/py_interface/erl_async_conn.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_async_conn.py", line 93
    except socket.error, (errNum, errText):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_common.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_common.py", line 130
    except AttributeError, info:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_epmd.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_epmd.py", line 602
    currReqTxt = "current request is %s" % `self._GetCurrReqId()`
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_eventhandler.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_eventhandler.py", line 115
    print "Error in EVCallback %s" % self.__repr__()
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_node.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_node.py", line 286
    erl_common.Debug("REX: Unexpected msg: %s" % `msg`)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_node_conn.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_node_conn.py", line 400
    debugTxt = "PassThrough-msg: terms=%s" % `terms`
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py_interface/erl_term.py'...
***   File "./lib/python3.5/site-packages/py_interface/erl_term.py", line 69
    raise "No such cached atom: %s" % `cache`
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/py_interface-0.93.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
